# BSc-Thesis

./: FER+_dataset.ipynb  ONNXNodesAST.py  README.md  model_notebook.ipynb  patt-lite-notebook.ipynb  transferlearning6.ipynb
Athos/ONNXCompiler/: common.py  process_onnx.py
Athos/SeeDot/: Compiler.py
EzPC/Athos/: CompileONNXGraph.py
EzPC/Athos/ONNXCompiler/: ONNXNodesAST.py  config.json
EzPC/Athos/SeeDot/: Type.py
EzPC/Athos/SeeDot/AST/: AST.py
EzPC/Athos/SeeDot/IR/: IRBuilderCSF.py
EzPC/Athos/SeeDot/Optimizations/: GarbageCollector.py
EzPC/SCI/src/: library_fixed_uniform.h
data/: FER+_dataset.ipynb
demo/: astOutput.pkl  config.json  model29may2_56_sci.ezpc  model29may2_input_weights_fixedpt_scale_10.inp  optimised_model29may2.onnx
demo/build_dir/: CMakeCache.txt  CMakeLists.txt
demo/debug/: seedot_ezpc_name_map.pkl  seedot_ezpc_name_map.txt
model/: model_notebook.ipynb  squeezenet2.py
